<resources>
    <string name="app_name">planistage</string>
    <string name="titre_eleve">ÉLÈVE</string>
    <string name="Nom">Nom :</string>
    <string name="titre_entreprise">ENTREPRISE</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="titre_stage">Stage</string>
    <string name="Journées_de_Stage">Journées de Stage</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">vendredi</string>
    <string name="HoraireStage">Horaire de Stage</string>
    <string name="HoraireDiner">Horaire de Diner</string>
    <string name="frequenceVisites">Fréquences des visites (par semaine)</string>
    <string name="once">30 Minutes</string>
    <string name="twice">45 minutes</string>
    <string name="thrice">1 heure</string>
    <string name="dispo">Disponibilités du tuteur de stage</string>
    <string name="merAM">Mercredi AM</string>
    <string name="merPM">Mercredi PM</string>
    <string name="jeuAM">Jeudi AM</string>
    <string name="jeuPM">Jeudi PM</string>
    <string name="venAM">Vencredi AM</string>
    <string name="venPM">Vendredi PM</string>
</resources>