<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/titre_eleve"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/Nom"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/eleve_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/spinner_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="20dp"
                    tools:srcCompat="@drawable/ic_image_24" />

                <ImageView
                    android:id="@+id/ivFlag"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="48dp"
                    android:onClick="changePriorite"
                    app:srcCompat="@drawable/ic_green_flag_24" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/titre_entreprise"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/Nom"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/entreprise_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/spinner_background" />

                    <TextView
                        android:id="@+id/adresseView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/textview_background"
                        android:enabled="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/villeView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/textview_background"
                        android:enabled="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/codePostalView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/textview_background"
                        android:enabled="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/provinceView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/textview_background"
                        android:enabled="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/titre_stage"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:layout_weight="1"
                    android:text="@string/Journées_de_Stage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wednesday" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/thursday" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/friday" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:layout_weight="1"
                    android:text="@string/HoraireStage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:layout_weight="1"
                    android:text="@string/HoraireDiner"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:layout_weight="1"
                    android:text="@string/frequenceVisites"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/once" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/twice" />

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/thrice" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clickAppliquer"
                android:text="Appliquer" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>